# dtp-flask

./: README.md  pyproject.toml
dtp/: run.py
dtp/api/: api.py  env.py  greeting.py  namespace.py  project.py  ref.py
dtp/db/: db.py  gen.py
dtp/db/models/: api.py  env.py  envsource.py  namespace.py  project.py  ref.py  testcase.py
dtp/specs/: helloworld-api.yaml  namespace.yaml
